intilized eslint configurations and error handling

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
+    "lint-debug": "eslint . --debugdebug"
   },
   "author": "ramanareddy kunam",
   "license": "ISC",
@@ -17,6 +20,10 @@
     "mongoose": "^8.4.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "@stylistic/eslint-plugin-js": "^2.3.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.6.0",
     "nodemon": "^3.1.4"
   }
 }
